--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./styles/fonts.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 <body>
   <header class="header">
     <nav class="header__menu">
-    <ul class="header__links-list">
-      <li class="header__links-list-item header__links-list-item_no-bullit">
-        <a href="#" class="header__link header__link-active">главная</a></li>
-      <li class="header__links-list-item">
-        <a href="#" class="header__link">посмотреть лоты</a></li>
-      <li class="header__links-list-item">
-        <a href="#" class="header__link">об аукционе</a></li>
-    </ul>
+      <ul class="header__links-list">
+        <li class="header__links-list-item header__links-list-item_no-bullit">
+          <a href="#" class="header__link header__link-active">главная</a></li>
+        <li class="header__links-list-item">
+          <a href="#" class="header__link">посмотреть лоты</a></li>
+        <li class="header__links-list-item">
+          <a href="#" class="header__link">об аукционе</a></li>
+      </ul>
     </nav>
     <div class="header__logo">
       <a href="#" class="header__logo">
@@ -27,14 +27,14 @@
       </a>
     </div>
     <address class="address header__adress">
-      <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-      <p>наб. Принсенграхт 263-265, <br> Амстердам</p>
+      <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263-265,  Амстердам</p>
     </address>
   </header>
   <main>
     <section class="cover">
-      <div class="overlay">
+      <div class="overlay"></div>
         <div class="cover-contain">
           <h1 class="cover-title">
             <span class="aligned-text aligned-text-left">о<span class="letter-spacing-expanded">н</span>о</span>
@@ -43,10 +43,9 @@
           </h1>
           <div class="cover-description">
             <p class="cover-description-text">аукцион вещей, в которые никто не верил</p>
-            <button class="bet-button">сделать ставку</button>
+            <button class="bet-button" type="button">сделать ставку</button>
           </div>
         </div>
-      </div>
     </section>
     <section class="lots">
       <h2 class="lots_heading">лоты</h2>
@@ -54,35 +53,32 @@
         <li class="lots_card-list-item">
           <a href="#" class="card-link">
             <article class="card card_type_film">
-              <div class="overlay">
-                <h3 class="card_title">фильм режиссёра,который бросил киношколу</h3>
+              <div class="overlay"></div>
+                <h3 class="card_title">фильм режиссёра, который бросил киношколу</h3>
                 <p class="card_text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-              </div>
             </article>
           </a>
         </li>
         <li class="lots_card-list-item">
           <a href="#" class="card-link">
             <article class="card card_type_book">
-              <div class="overlay">
+              <div class="overlay"></div>
                 <h3 class="card_title">книга, где описан один скучный день из жизни рекламного агента</h3>
                 <p class="card_text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-              </div>
             </article>
           </a>
         </li>
         <li class="lots_card-list-item">
           <a href="#" class="card-link">
             <article class="card card_type_picture">
-              <div class="overlay">
+              <div class="overlay"></div>
                 <h3 class="card_title">картина, которую повторит даже 5-летний сын маминой подруги</h3>
                 <p class="card_text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-              </div>
             </article>
           </a>
         </li>  
       </ul>
-      <a href="#" class="lots_look-more-link">посмотреть больше</a>
+        <a href="#" class="lots_look-more-link">посмотреть больше</a>
     </section>
     <section class="about">
       <div class="about_column">
@@ -99,9 +95,9 @@
   </main>
   <footer class="footer">
     <address class="address">
-      <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-      <p>наб. Принсенграхт 263-265, <br> Амстердам</p>
+      <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263-265,  Амстердам</p>
     </address>
     <nav class="footer__menu">
       <ul class="footer__menu-list">
