--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
 <body>
   <header class="header">
@@ -27,7 +27,7 @@
       </a>
     </div>
     <address class="address header__adress">
-      <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+      <a href="tel:+9-999-555-5555">+9 999 555 5555</a>
       <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p>наб. Принсенграхт 263-265,  Амстердам</p>
     </address>
@@ -37,8 +37,8 @@
       <div class="overlay"></div>
         <div class="cover-contain">
           <h1 class="cover-title">
-            <span class="aligned-text aligned-text-left">о<span class="letter-spacing-expanded">н</span>о</span>
-            <span class="aligned-text aligned-text-center">те<span class="letter-spacing-expanded">б</span>е</span>
+            <span class="aligned-text aligned-text-left">о<span class="letter-spacing-expanded">но</span></span>
+            <span class="aligned-text aligned-text-center">те<span class="letter-spacing-expanded">бе</span></span>
             <span class="aligned-text aligned-text-right"><span class="letter-spacing-expanded">н</span>ад<span class="no-letter-spacing">о</span></span>
           </h1>
           <div class="cover-description">
@@ -95,7 +95,7 @@
   </main>
   <footer class="footer">
     <address class="address">
-      <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+      <a href="tel:+9-999-555-5555">+9 999 555 5555</a>
       <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p>наб. Принсенграхт 263-265,  Амстердам</p>
     </address>
